--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -37,70 +38,28 @@
       <a href="#contact">Gallery</a>
       <a href="#contact">Contact</a>
     </nav>
-  </header>  <section class="section" id="products">
+  </header>
+
+  <section class="section" id="products">
     <h2>Available Smartphones (10% OFF!)</h2>
     <div class="products">
-      <div class="product">
-        <img src="https://fdn2.gsmarena.com/vv/pics/apple/apple-iphone-15-pro-1.jpg" alt="iPhone 15 Pro">
-        <h3>iPhone 15 Pro</h3>
-        <p>₹1,35,000 <span class="discount">10% OFF</span></p>
-      </div>
-      <div class="product">
-        <img src="https://fdn2.gsmarena.com/vv/pics/samsung/samsung-galaxy-s24-ultra-5g-1.jpg" alt="Galaxy S24 Ultra">
-        <h3>Samsung Galaxy S24 Ultra</h3>
-        <p>₹1,20,000 <span class="discount">10% OFF</span></p>
-      </div>
-      <div class="product">
-        <img src="https://fdn2.gsmarena.com/vv/pics/oneplus/oneplus-12-1.jpg" alt="OnePlus 12">
-        <h3>OnePlus 12</h3>
-        <p>₹64,999 <span class="discount">10% OFF</span></p>
-      </div>
-      <div class="product">
-        <img src="https://fdn2.gsmarena.com/vv/pics/xiaomi/xiaomi-14-ultra-1.jpg" alt="Xiaomi 14 Ultra">
-        <h3>Xiaomi 14 Ultra</h3>
-        <p>₹74,999 <span class="discount">10% OFF</span></p>
-      </div>
-      <div class="product">
-        <img src="https://fdn2.gsmarena.com/vv/pics/vivo/vivo-x100-pro-1.jpg" alt="Vivo X100 Pro">
-        <h3>Vivo X100 Pro</h3>
-        <p>₹65,999 <span class="discount">10% OFF</span></p>
-      </div>
-      <div class="product">
-        <img src="https://fdn2.gsmarena.com/vv/pics/realme/realme-gt5-pro-1.jpg" alt="Realme GT 5 Pro">
-        <h3>Realme GT 5 Pro</h3>
-        <p>₹42,499 <span class="discount">10% OFF</span></p>
-      </div>
-      <div class="product">
-        <img src="https://fdn2.gsmarena.com/vv/pics/google/google-pixel-8-pro-1.jpg" alt="Pixel 8 Pro">
-        <h3>Google Pixel 8 Pro</h3>
-        <p>₹85,000 <span class="discount">10% OFF</span></p>
-      </div>
-      <div class="product">
-        <img src="https://fdn2.gsmarena.com/vv/pics/motorola/motorola-edge-50-pro-1.jpg" alt="Moto Edge 50 Pro">
-        <h3>Motorola Edge 50 Pro</h3>
-        <p>₹34,999 <span class="discount">10% OFF</span></p>
-      </div>
-      <div class="product">
-        <img src="https://fdn2.gsmarena.com/vv/pics/nokia/nokia-g42-5g-1.jpg" alt="Nokia G42">
-        <h3>Nokia G42 5G</h3>
-        <p>₹13,499 <span class="discount">10% OFF</span></p>
-      </div>
-      <div class="product">
-        <img src="https://fdn2.gsmarena.com/vv/pics/oppo/oppo-reno11-pro-1.jpg" alt="Oppo Reno11 Pro">
-        <h3>Oppo Reno11 Pro</h3>
-        <p>₹39,999 <span class="discount">10% OFF</span></p>
-      </div>
-    </div>
-  </section>  <section class="section" id="contact">
-    <h2>Contact Us</h2>
-    <div class="contact-icons">
-      <a href="tel:8788627532"><i class="fas fa-phone-alt"></i>Call: 8788627532</a>
-      <a href="https://wa.me/918788627532" target="_blank"><i class="fab fa-whatsapp"></i>WhatsApp: 8788627532</a>
-      <a href="https://www.instagram.com/moryamobile2023?igsh=MWY5MGo5bWl6YzU4dg==" target="_blank"><i class="fab fa-instagram"></i>Instagram</a>
-      <a href="https://maps.app.goo.gl/2xs3qxtt2GaitwtV7" target="_blank"><i class="fas fa-map-marker-alt"></i>Store Location</a>
-    </div>
-  </section>  <footer>
-    <p>&copy; 2025 मोरया मोबाईल. All rights reserved.</p>
-  </footer>
-</body>
-</html>
+      <!-- 20 Mobile Products -->
+      <div class="product"><img src="https://fdn2.gsmarena.com/vv/pics/apple/apple-iphone-15-pro-1.jpg" alt="iPhone 15 Pro"><h3>iPhone 15 Pro</h3><p>₹1,35,000 <span class="discount">10% OFF</span></p></div>
+      <div class="product"><img src="https://fdn2.gsmarena.com/vv/pics/samsung/samsung-galaxy-s24-ultra-5g-1.jpg" alt="Samsung Galaxy S24 Ultra"><h3>Samsung Galaxy S24 Ultra</h3><p>₹1,20,000 <span class="discount">10% OFF</span></p></div>
+      <div class="product"><img src="https://fdn2.gsmarena.com/vv/pics/oneplus/oneplus-12-1.jpg" alt="OnePlus 12"><h3>OnePlus 12</h3><p>₹64,999 <span class="discount">10% OFF</span></p></div>
+      <div class="product"><img src="https://fdn2.gsmarena.com/vv/pics/xiaomi/xiaomi-14-ultra-1.jpg" alt="Xiaomi 14 Ultra"><h3>Xiaomi 14 Ultra</h3><p>₹74,999 <span class="discount">10% OFF</span></p></div>
+      <div class="product"><img src="https://fdn2.gsmarena.com/vv/pics/vivo/vivo-x100-pro-1.jpg" alt="Vivo X100 Pro"><h3>Vivo X100 Pro</h3><p>₹65,999 <span class="discount">10% OFF</span></p></div>
+      <div class="product"><img src="https://fdn2.gsmarena.com/vv/pics/realme/realme-gt5-pro-1.jpg" alt="Realme GT 5 Pro"><h3>Realme GT 5 Pro</h3><p>₹42,499 <span class="discount">10% OFF</span></p></div>
+      <div class="product"><img src="https://fdn2.gsmarena.com/vv/pics/google/google-pixel-8-pro-1.jpg" alt="Pixel 8 Pro"><h3>Google Pixel 8 Pro</h3><p>₹85,000 <span class="discount">10% OFF</span></p></div>
+      <div class="product"><img src="https://fdn2.gsmarena.com/vv/pics/motorola/motorola-edge-50-pro-1.jpg" alt="Motorola Edge 50 Pro"><h3>Motorola Edge 50 Pro</h3><p>₹34,999 <span class="discount">10% OFF</span></p></div>
+      <div class="product"><img src="https://fdn2.gsmarena.com/vv/pics/nokia/nokia-g42-5g-1.jpg" alt="Nokia G42 5G"><h3>Nokia G42 5G</h3><p>₹13,499 <span class="discount">10% OFF</span></p></div>
+      <div class="product"><img src="https://fdn2.gsmarena.com/vv/pics/oppo/oppo-reno11-pro-1.jpg" alt="Oppo Reno11 Pro"><h3>Oppo Reno11 Pro</h3><p>₹39,999 <span class="discount">10% OFF</span></p></div>
+      <div class="product"><img src="https://fdn2.gsmarena.com/vv/pics/infinix/infinix-zero-30-5g-1.jpg" alt="Infinix Zero 30"><h3>Infinix Zero 30</h3><p>₹18,999 <span class="discount">10% OFF</span></p></div>
+      <div class="product"><img src="https://fdn2.gsmarena.com/vv/pics/tecno/tecno-phantom-v-flip-1.jpg" alt="Tecno Phantom V Flip"><h3>Tecno Phantom V Flip</h3><p>₹49,999 <span class="discount">10% OFF</span></p></div>
+      <div class="product"><img src="https://fdn2.gsmarena.com/vv/pics/itel/itel-s23-plus-1.jpg" alt="Itel S23 Plus"><h3>Itel S23 Plus</h3><p>₹13,999 <span class="discount">10% OFF</span></p></div>
+      <div class="product"><img src="https://fdn2.gsmarena.com/vv/pics/iqoo/iqoo-12-1.jpg" alt="iQOO 12"><h3>iQOO 12</h3><p>₹54,999 <span class="discount">10% OFF</span></p></div>
+      <div class="product"><img src="https://fdn2.gsmarena.com/vv/pics/samsung/samsung-galaxy-a55-5g-1.jpg" alt="Samsung Galaxy A55"><h3>Samsung Galaxy A55</h3><p>₹35,999 <span class="discount">10% OFF</span></p></div>
+      <div class="product"><img src="https://fdn2.gsmarena.com/vv/pics/oneplus/oneplus-nord-ce4-1.jpg" alt="OnePlus Nord CE 4"><h3>OnePlus Nord CE 4</h3><p>₹24,999 <span class="discount">10% OFF</span></p></div>
+      <div class="product"><img src="https://fdn2.gsmarena.com/vv/pics/poco/poco-x6-pro-1.jpg" alt="Poco X6 Pro"><h3>Poco X6 Pro</h3><p>₹26,999 <span class="discount">10% OFF</span></p></div>
+      <div class="product"><img src="https://fdn2.gsmarena.com/vv/pics/xiaomi/xiaomi-redmi-note-13-pro-plus-5g-1.jpg" alt="Redmi Note 13 Pro+ 5G"><h3>Redmi Note 13 Pro+ 5G</h3><p>₹31,999 <span class="discount">10% OFF</span></p></div>
+      <div class="product"><img src="https://fdn2.gsmarena.com/vv/pics/vivo/vivo-v30-1.jpg" alt="Vivo V30"><h3>Vivo V30</h3><p>₹32,999 <span class="discount">10% OFF</span></p></div>
