--- a/index.html
+++ b/index.html
@@ -63,3 +63,22 @@
       <div class="product"><img src="https://fdn2.gsmarena.com/vv/pics/poco/poco-x6-pro-1.jpg" alt="Poco X6 Pro"><h3>Poco X6 Pro</h3><p>₹26,999 <span class="discount">10% OFF</span></p></div>
       <div class="product"><img src="https://fdn2.gsmarena.com/vv/pics/xiaomi/xiaomi-redmi-note-13-pro-plus-5g-1.jpg" alt="Redmi Note 13 Pro+ 5G"><h3>Redmi Note 13 Pro+ 5G</h3><p>₹31,999 <span class="discount">10% OFF</span></p></div>
       <div class="product"><img src="https://fdn2.gsmarena.com/vv/pics/vivo/vivo-v30-1.jpg" alt="Vivo V30"><h3>Vivo V30</h3><p>₹32,999 <span class="discount">10% OFF</span></p></div>
+      </div>
+  </section>
+
+  <section class="section" id="contact">
+    <h2>Contact Us</h2>
+    <div class="contact-icons">
+      <a href="tel:8788627532"><i class="fas fa-phone-alt"></i>Call: 8788627532</a>
+      <a href="https://wa.me/918788627532" target="_blank"><i class="fab fa-whatsapp"></i>WhatsApp: 8788627532</a>
+      <a href="https://www.instagram.com/moryamobile2023" target="_blank"><i class="fab fa-instagram"></i>Instagram</a>
+      <a href="https://maps.app.goo.gl/2xs3qxtt2GaitwtV7" target="_blank"><i class="fas fa-map-marker-alt"></i>Store Location</a>
+    </div>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 मोरया मोबाईल. All rights reserved.</p>
+  </footer>
+</body>
+</html>
+
