--- a/index.html
+++ b/index.html
@@ -179,9 +179,15 @@
     </div>
   </section>
 
-  <a href="https://wa.me/918788627532" class="whatsapp-float" target="_blank">
-    <i class="fab fa-whatsapp"></i>
-  </a>
+  <section class="section" id="contact">
+    <h2>Contact Us</h2>
+    <div class="contact-icons">
+      <a href="tel:8788627532"><i class="fas fa-phone-alt"></i>Call: 8788627532</a>
+      <a href="https://wa.me/918788627532" target="_blank"><i class="fab fa-whatsapp"></i>WhatsApp: 8788627532</a>
+      <a href="https://www.instagram.com/moryamobile2023" target="_blank"><i class="fab fa-instagram"></i>Instagram</a>
+      <a href="https://maps.app.goo.gl/2xs3qxtt2GaitwtV7" target="_blank"><i class="fas fa-map-marker-alt"></i>Store Location</a>
+    </div>
+  </section>
 
   <footer>
     <p>&copy; 2025 मोरया मोबाईल. All rights reserved.</p>
